# compat-tables

./: .gitignore  Cargo.toml  README.md  compat-tables.sln  package-lock.json  run.sh
docs/: index.html  styles.css
dotnet-tests/: JsonLogic.Tests.csproj  Program.cs
features/: .gitignore  compound_tests.feature  data-driven.feature  non-rules_get_passed_through.feature  single_operator_tests.feature
go-tests/: .gitignore  go.mod  go.sum  main.go  run.sh  version.json
java-tests/: pom.xml
js-json-logic-engine/: cucumber-report.html  cucumber.js  jsonlogic.js  package-lock.json  package.json  report.json  run.sh  version.json
js-json-logic-js/: cucumber.js  jsonlogic.js  package-lock.json  package.json  report.json  run.sh  version.json
js-tests/: cucumber.json-logic-engine.js  cucumber.json-logic-js.js  json-logic-js.js  main.js  package-lock.json  package.json  run.sh  version.json
php-tests/: behat.yml  composer.json  main.php  run.sh  version.json
python-tests/: main.py  requirements.txt  run.sh  version.json  version.py
reports/: json-logic-engine.json  json-logic-js.json  report.py  run.sh  rust-datalogic-rs.json  rust-jsonlogic-rs.json  rust-jsonlogic.json
rust-datalogic-rs/: Cargo.toml  report.json
rust-datalogic-rs/tests/: rust-datalogic-rs.rs
rust-tests/: Cargo.toml  run.sh  version.json
rust-tests/src/: lib.rs  main.rs  types.rs
rust-tests/src/engines/: test_runner.rs
rust-tests/src/reporting/: summary.rs
rust-tests/src/test/: case.rs  mod.rs
rust-tests/tests/: rust-datalogic-rs.rs  rust-jsonlogic-rs.rs  rust-jsonlogic.rs
(+48 files in other folders)
