[package]
name = "rust-datalogic-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cucumber = { version = "0.20", features = ["output-json"] }
futures = "0.3"

[dependencies]
tokio = { version = "1.28", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
datalogic-rs = "1.0.6"
once_cell = "1.20.2"

[[test]]
name = "rust-datalogic-rs"
harness = false
