[package]
name = "rust-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cucumber = { version = "0.20", features = ["output-json"] }
futures = "0.3"

[dependencies]
tokio = { version = "1.42", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
datalogic-rs = "1.0.8"
jsonlogic-rs = "0.4.0"
once_cell = "1.20.2"
jsonlogic = "0.5"

[[test]]
name = "rust-datalogic-rs"
harness = false

[[test]]
name = "rust-jsonlogic-rs"
harness = false

[[test]]
name = "rust-jsonlogic"
harness = false
